--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,11 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-raw.css";
 
 @import "screen/friends.css";
-
+@import "screen/find.css";
+@import "screen/more.css";
 
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
