--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,8 +19,48 @@
     color: #2e363e;
 }
 
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
+
 .nav__btn {
+    transform: translateY(50px);
+    opacity: 0;
     position: relative;
+    animation: appearBtnAnimation 0.2s ease-in-out forwards;
+}
+
+.nav__btn:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.nav__btn:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+.nav__btn:last-child {
+    animation-delay: 0.6s;
+}
+
+@keyframes notificationAnimation {
+    0% {
+        transform: none;
+    }
+
+    50% {
+        transform: translateY(-5px) rotateY(360deg);
+    }
+
+    100% {
+        transform: none;
+    }
 }
 
 .nav__notification {
@@ -29,8 +69,8 @@
     /* position absolute aligns to the closest parent, this cas nav__link */
     left: 15px;
     bottom: 15px;
+    animation: notificationAnimation 3s ease-in-out infinite;
 }
-
 
 .nav__dot {
     background-color: tomato;
