--- a/css/screen/find.css
+++ b/css/screen/find.css
@@ -97,3 +97,26 @@
 .open-post__heart-count span {
     margin-left: 3px;
 }
+
+@keyframes heartBeat {
+    0% {
+        color: white;
+        transform: none;
+    }
+
+    50% {
+        color: tomato;
+        transform: scale(3);
+    }
+
+    100% {
+        color: white;
+        transform: none;
+    }
+}
+
+.open-post__heart-count:hover i {
+    will-change: transform;
+    /* let the system know this wil be changed so the animation might be more stable and the animation will be more accelerated */
+    animation: heartBeat 1s linear infinite;
+}
