--- a/css/screen/friends.css
+++ b/css/screen/friends.css
@@ -24,3 +24,29 @@
 #friends-display-link i {
     color: rgba(0, 0, 0, 0.3);
 }
+
+@keyframes hideSplashScreen {
+    from {
+        opacity: 1;
+    }
+
+    to {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splah-screen {
+    background-color: var(--yellow);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 132px;
+    animation: hideSplashScreen 0.4s ease-in-out forwards;
+    /* forwards: the last property (opacity = 0) will stay even after the animation ends*/
+    animation-delay: 1.5s;
+}
