--- a/css/screen/chat.css
+++ b/css/screen/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
     background-color: #abc1d1;
-    height: 11000vh;
+    height: 500vh;
     /* to scroll */
 }
 
@@ -25,11 +25,24 @@
     /* order of the layer, the default is 0*/
 }
 
+@keyframes fadeIn {
+    from {
+        transform: translateY(10px);
+        opacity: 0;
+    }
+
+    to {
+        transform: none;
+        opacity: 1;
+    }
+}
+
 .main-chat {
-    margin-top: 120px;
+    margin-top: 150px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    animation: fadeIn .8s linear;
 }
 
 .chat__timestamp {
@@ -110,6 +123,7 @@
     padding: 5px 25px;
     box-sizing: border-box;
     align-items: center;
+    transition: all .3s ease-in-out;
 }
 
 .reply .reply__column:first-child {
@@ -123,10 +137,12 @@
 
 .reply input {
 
-    height: 30px;
+    padding: 14px;
     width: 100%;
     border: var(--main-border);
-    border-radius: 20px;
+    border-radius: 25px;
+    box-sizing: border-box;
+    transition: all 0.3s ease-in-out;
 }
 
 .reply i {
@@ -137,8 +153,8 @@
 .reply__column:last-child>i,
 .reply__column:last-child button {
     position: absolute;
-    right: -3px;
-    top: 2px;
+    right: 3px;
+    top: 3px;
 
 }
 
@@ -150,9 +166,9 @@
 .reply__column button {
     background-color: var(--yellow);
     border: none;
-    width: 30px;
-    height: 30px;
-    border-radius: 50px;
+    width: 38px;
+    height: 38px;
+    border-radius: 50%;
 }
 
 .reply__column button i {
@@ -162,4 +178,26 @@
 .reply__column button:focus,
 .reply__column button:active {
     outline: none;
+}
+
+.reply .reply__column:first-child,
+.reply .fa-face-smile,
+.reply button {
+    transition: opacity .3s ease-in-out;
+}
+
+.reply:focus-within .reply__column:first-child,
+.reply:focus-within .fa-face-smile,
+.reply:focus-within button {
+    opacity: 0;
+}
+
+.reply:focus-within input {
+    width: 95vw;
+    transform: translateX(-13%) translateY(-80px);
+}
+
+.reply:focus-within {
+    transform: translateY(80px);
+
 }
