--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "components/badge.css";
 @import "components/icon-raw.css";
 @import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 @import "screen/friends.css";
 @import "screen/find.css";
