--- a/css/styles.css
+++ b/css/styles.css
@@ -38,6 +38,12 @@ body {
     font-size: 25px;
 }
 
+.welcome-header__subtitle {
+    margin-bottom: 15px;
+    font-size: 15px;
+    color: red;
+}
+
 .welcome-header__text {
     width: 60%;
     opacity: 0.7;
